macros/tests/sig1-fail.stderr
error: Incorrect function signature, expected `fn(handle: EfiHandle, table: SystemTable<Boot>) -> error::Result<()>`
       Try `fn e_main(handle: EfiHandle, table: SystemTable<Boot>) -> error::Result<()>`
 --> tests/sig1-fail.rs:5:1
  |
5 | fn e_main() {}
  | ^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/sig1-fail.rs:5:4
  |
5 | fn e_main() {}
  |    ^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `fn(EfiHandle, SystemTable<Boot>) -> Result<(), UefiError>`
                found fn item `fn() {e_main}`
  = note: when the arguments and return types match, functions can be coerced to function pointers

error[E0061]: this function takes 0 arguments but 2 arguments were supplied
 --> tests/sig1-fail.rs:5:4
  |
4 | #[entry]
  | --------
  | |
  | unexpected argument of type `EfiHandle`
  | unexpected argument of type `SystemTable<Boot>`
5 | fn e_main() {}
  |    ^^^^^^
  |
note: function defined here
 --> tests/sig1-fail.rs:5:4
  |
5 | fn e_main() {}
  |    ^^^^^^
help: remove the extra arguments
  |
4 | #[entry]
  |

error[E0308]: mismatched types
 --> tests/sig1-fail.rs:4:1
  |
4 | #[entry]
  | ^^^^^^^^
  | |
  | expected `Result<(), UefiError>`, found `()`
  | expected `Result<(), UefiError>` because of return type
  |
  = note:   expected enum `Result<(), UefiError>`
          found unit type `()`
  = note: this error originates in the attribute macro `entry` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try wrapping the expression in `Ok`
  |
4 | Ok(#[entry])
  | +++        +
