macros/tests/sig1-fail.rs
//! This file tests the output when the entire signature is wrong
use uefi::entry;

#[entry]
fn e_main() {}

fn main() {}
